update customer api completed
